--- a/index.html
+++ b/index.html
@@ -7364,7 +7364,7 @@
                     "
                   >
                     <img
-                      src="images/InnovationBulb.png"
+                      src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/InnovationBulb.png"
                       loading="lazy"
                       style="
                         display: block;
@@ -8101,7 +8101,7 @@
                       "
                     >
                       <img
-                        src="images/brain.png"
+                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/brain.png"
                         loading="lazy"
                         style="
                           display: block;
@@ -8749,7 +8749,7 @@
                         "
                       >
                         <img
-                          src="images/Leetcode-icon.png"
+                          src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Leetcode-icon.png"
                           loading="lazy"
                           style="
                             display: block;
@@ -9822,11 +9822,11 @@
                       "
                     >
                       <img
-                        src="images/Nvidia-NLP-certificate.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-NLP-certificate.png"
                         loading="lazy"
                         srcset="
                           images/9bfad64f310a4516f41ddacf051c9ca5.png 324w,
-                          images/Nvidia-NLP-certificate.png 648w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-NLP-certificate.png 648w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 92.229085vw, (min-width: 480.05px) and (max-width: 768px) 57.64317813vw, (min-width: 768.05px) and (max-width: 1024px) 43.2323836vw, (min-width: 1024.05px) 32.40846325vw"
                         style="
@@ -9885,11 +9885,11 @@
                       "
                     >
                       <img
-                        src="images/Nvidia-DeepLearning.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-DeepLearning.png"
                         loading="lazy"
                         srcset="
                           images/defe07d757935dba7af32f2681aa7e7c.png 324w,
-                          images/Nvidia-DeepLearning.png 540w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-DeepLearning.png 540w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 90.01548342vw, (min-width: 480.05px) and (max-width: 768px) 56.25967714vw, (min-width: 768.05px) and (max-width: 1024px) 42.19475785vw, (min-width: 1024.05px) 31.63062375vw"
                         style="
@@ -10045,7 +10045,7 @@
                       "
                     >
                       <img
-                        src="images/IEEE-C-programming2.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming2.png"
                         loading="lazy"
                         style="
                           display: block;
@@ -10103,7 +10103,7 @@
                       "
                     >
                       <img
-                        src="images/IEEE-C-programming.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming.png"
                         loading="lazy"
                         style="
                           display: block;
@@ -10161,7 +10161,7 @@
                       "
                     >
                       <img
-                        src="images/IEEE-C-programming3.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming3.png"
                         loading="lazy"
                         style="
                           display: block;
@@ -10461,11 +10461,11 @@
                       "
                     >
                       <img
-                        src="images/aws-ml.jpg"
+                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml.jpg"
                         loading="lazy"
                         srcset="
                           images/305c3d5979e273e09a8c64ce58a2c100.jpg 495w,
-                          images/aws-ml.jpg 825w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml.jpg 825w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 93.33333333vw, (min-width: 480.05px) and (max-width: 768px) 82.36435572vw, (min-width: 768.05px) and (max-width: 1024px) 61.77326679vw, (min-width: 1024.05px) 46.30733909vw"
                         style="
@@ -10524,11 +10524,11 @@
                       "
                     >
                       <img
-                        src="images/aws-ml2.jpg"
+                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml2.jpg"
                         loading="lazy"
                         srcset="
                           images/b8e17fc89e8299aadbad4cf145d097b7.jpg 495w,
-                          images/aws-ml2.jpg 825w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml2.jpg 825w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 93.33333333vw, (min-width: 480.05px) and (max-width: 768px) 82.36435572vw, (min-width: 768.05px) and (max-width: 1024px) 61.77326679vw, (min-width: 1024.05px) 46.30733909vw"
                         style="
@@ -10645,11 +10645,11 @@
                       "
                     >
                       <img
-                        src="images/SmartCampusHackathon-certificate.jpg"
+                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/SmartCampusHackathon-certificate.jpg"
                         loading="lazy"
                         srcset="
                           images/ea2af611a0fef16e5f08acf76e847490.jpg  527w,
-                          images/SmartCampusHackathon-certificate.jpg 1053w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/SmartCampusHackathon-certificate.jpg 1053w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 93.33333333vw, (min-width: 480.05px) and (max-width: 768px) 91.66666667vw, (min-width: 768.05px) and (max-width: 1024px) 84.44059451vw, (min-width: 1024.05px) 63.2995379vw"
                         style="
