--- a/index.html
+++ b/index.html
@@ -10045,7 +10045,7 @@
                       "
                     >
                       <img
-                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming2.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming2.png?raw=true"
                         loading="lazy"
                         style="
                           display: block;
@@ -10103,7 +10103,7 @@
                       "
                     >
                       <img
-                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming.png?raw=true"
                         loading="lazy"
                         style="
                           display: block;
@@ -10161,7 +10161,7 @@
                       "
                     >
                       <img
-                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming3.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/IEEE-C-programming3.png?raw=true"
                         loading="lazy"
                         style="
                           display: block;
