--- a/index.html
+++ b/index.html
@@ -7364,7 +7364,7 @@
                     "
                   >
                     <img
-                      src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/InnovationBulb.png"
+                      src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/InnovationBulb.png?raw=true"
                       loading="lazy"
                       style="
                         display: block;
@@ -7763,7 +7763,7 @@
                       "
                     >
                       <img
-                        src="images/nimish-juta.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/nimish-juta.png?raw=true"
                         loading="lazy"
                         style="
                           display: block;
@@ -7863,7 +7863,7 @@
                       "
                     >
                       <img
-                        src="images/working-on-pc.jpg"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/working-on-pc.jpg?raw=true"
                         alt="A Person Using the Computer"
                         loading="lazy"
                         style="
@@ -8101,7 +8101,7 @@
                       "
                     >
                       <img
-                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/brain.png"
+                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/brain.png?raw=true"
                         loading="lazy"
                         style="
                           display: block;
@@ -8258,7 +8258,7 @@
                       "
                     >
                       <img
-                        src="images/pen.jpg"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/pen.jpg?raw=true"
                         alt="Designer drawing with stylus on graphic tablet"
                         loading="lazy"
                         style="
@@ -8683,7 +8683,7 @@
                         "
                       >
                         <img
-                          src="images/codechef-icon.png"
+                          src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/codechef-icon.png?raw=true"
                           loading="lazy"
                           style="
                             display: block;
@@ -8749,7 +8749,7 @@
                         "
                       >
                         <img
-                          src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Leetcode-icon.png"
+                          src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Leetcode-icon.png?raw=true"
                           loading="lazy"
                           style="
                             display: block;
@@ -8815,7 +8815,7 @@
                         "
                       >
                         <img
-                          src="images/hackerrank-icon.png"
+                          src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/hackerrank-icon.png?raw=true"
                           loading="lazy"
                           style="
                             display: block;
@@ -9094,7 +9094,7 @@
                       "
                     >
                       <img
-                        src="images/drawing.jpg"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/drawing.jpg?raw=true"
                         alt="Unrecognizable artist drawing creative sketch"
                         loading="lazy"
                         style="
@@ -9194,7 +9194,7 @@
                       "
                     >
                       <img
-                        src="images/working-on-pc.jpg"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/working-on-pc.jpg?raw=true"
                         alt="A Person Using the Computer"
                         loading="lazy"
                         style="
@@ -9494,7 +9494,7 @@
                         "
                       >
                         <img
-                          src="images/instagram-icon.png"
+                          src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/instagram-icon.png?raw=true"
                           loading="lazy"
                           style="
                             display: block;
@@ -9560,7 +9560,7 @@
                         "
                       >
                         <img
-                          src="images/twitter-icon.png"
+                          src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/twitter-icon.png?raw=true"
                           loading="lazy"
                           style="
                             display: block;
@@ -9622,11 +9622,11 @@
                       "
                     >
                       <img
-                        src="images/nimish.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/nimish.png?raw=true"
                         loading="lazy"
                         srcset="
                           images/4af91c9891a3bd82dc8317a8e35c0fbb.png 182w,
-                          images/nimish.png 364w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/nimish.png?raw=true 364w
                         "
                         sizes="(max-width: 375px) 65.93683175vw, (min-width: 375.05px) and (max-width: 480px) 51.51314981vw, (min-width: 480.05px) and (max-width: 768px) 32.19571863vw, (min-width: 768.05px) and (max-width: 1024px) 24.14678897vw, (min-width: 1024.05px) 18.10125323vw"
                         style="
@@ -9822,11 +9822,11 @@
                       "
                     >
                       <img
-                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-NLP-certificate.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-NLP-certificate.png?raw=true"
                         loading="lazy"
                         srcset="
                           images/9bfad64f310a4516f41ddacf051c9ca5.png 324w,
-                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-NLP-certificate.png 648w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-NLP-certificate.png?raw=true 648w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 92.229085vw, (min-width: 480.05px) and (max-width: 768px) 57.64317813vw, (min-width: 768.05px) and (max-width: 1024px) 43.2323836vw, (min-width: 1024.05px) 32.40846325vw"
                         style="
@@ -9885,11 +9885,11 @@
                       "
                     >
                       <img
-                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-DeepLearning.png"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-DeepLearning.png?raw=true"
                         loading="lazy"
                         srcset="
                           images/defe07d757935dba7af32f2681aa7e7c.png 324w,
-                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-DeepLearning.png 540w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/Nvidia-DeepLearning.png?raw=true 540w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 90.01548342vw, (min-width: 480.05px) and (max-width: 768px) 56.25967714vw, (min-width: 768.05px) and (max-width: 1024px) 42.19475785vw, (min-width: 1024.05px) 31.63062375vw"
                         style="
@@ -10277,11 +10277,11 @@
                       "
                     >
                       <img
-                        src="images/udemy-c.jpg"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/udemy-c.jpg?raw=true"
                         loading="lazy"
                         srcset="
                           images/761b81d1b47305fd247fe9c6e6debcaf.jpg  667w,
-                          images/udemy-c.jpg 1001w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/udemy-c.jpg?raw=true 1001w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 93.33333333vw, (min-width: 480.05px) and (max-width: 768px) 83.90168906vw, (min-width: 768.05px) and (max-width: 1024px) 62.9262668vw, (min-width: 1024.05px) 47.17166706vw"
                         style="
@@ -10340,11 +10340,11 @@
                       "
                     >
                       <img
-                        src="images/cisco-networking_basics.jpg"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/cisco-networking_basics.jpg?raw=true"
                         loading="lazy"
                         srcset="
                           images/c3daddb0d63ec65d372f63c36ccdf284.jpg 495w,
-                          images/cisco-networking_basics.jpg 825w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/cisco-networking_basics.jpg?raw=true 825w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 93.33333333vw, (min-width: 480.05px) and (max-width: 768px) 75.54849537vw, (min-width: 768.05px) and (max-width: 1024px) 56.66137152vw, (min-width: 1024.05px) 42.47528876vw"
                         style="
@@ -10461,11 +10461,11 @@
                       "
                     >
                       <img
-                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml.jpg"
+                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml.jpg?raw=true"
                         loading="lazy"
                         srcset="
                           images/305c3d5979e273e09a8c64ce58a2c100.jpg 495w,
-                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml.jpg 825w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml.jpg?raw=true 825w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 93.33333333vw, (min-width: 480.05px) and (max-width: 768px) 82.36435572vw, (min-width: 768.05px) and (max-width: 1024px) 61.77326679vw, (min-width: 1024.05px) 46.30733909vw"
                         style="
@@ -10524,11 +10524,11 @@
                       "
                     >
                       <img
-                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml2.jpg"
+                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml2.jpg?raw=true"
                         loading="lazy"
                         srcset="
                           images/b8e17fc89e8299aadbad4cf145d097b7.jpg 495w,
-                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml2.jpg 825w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/aws-ml2.jpg?raw=true 825w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 93.33333333vw, (min-width: 480.05px) and (max-width: 768px) 82.36435572vw, (min-width: 768.05px) and (max-width: 1024px) 61.77326679vw, (min-width: 1024.05px) 46.30733909vw"
                         style="
@@ -10645,11 +10645,11 @@
                       "
                     >
                       <img
-                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/SmartCampusHackathon-certificate.jpg"
+                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/SmartCampusHackathon-certificate.jpg?raw=true"
                         loading="lazy"
                         srcset="
                           images/ea2af611a0fef16e5f08acf76e847490.jpg  527w,
-                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/SmartCampusHackathon-certificate.jpg 1053w
+                          https://github.com/njulka17/My-Portfolio-Website/blob/main/images/SmartCampusHackathon-certificate.jpg?raw=true 1053w
                         "
                         sizes="(max-width: 375px) 91.46666667vw, (min-width: 375.05px) and (max-width: 480px) 93.33333333vw, (min-width: 480.05px) and (max-width: 768px) 91.66666667vw, (min-width: 768.05px) and (max-width: 1024px) 84.44059451vw, (min-width: 1024.05px) 63.2995379vw"
                         style="
