--- a/index.html
+++ b/index.html
@@ -8101,7 +8101,7 @@
                       "
                     >
                       <img
-                        https://github.com/njulka17/My-Portfolio-Website/blob/main/images/brain.png?raw=true"
+                        src="https://github.com/njulka17/My-Portfolio-Website/blob/main/images/brain.png?raw=true"
                         loading="lazy"
                         style="
                           display: block;
