--- a/index.html
+++ b/index.html
@@ -8652,7 +8652,7 @@
                   id="GNzmAR4dEtlfdWZb"
                   target="_blank"
                   rel="noopener"
-                  href="/_link/?link=https%3A%2F%2Fwww.codechef.com%2Fusers%2Fsrmistk_360&target=X07XE%2FGPYtBQ6jAuLnXtmKxbJFJ%2FAnT5IT0stkScGPjjMpyfg7XC0LqSo5CChCbujamwpFyx4pRBqmuNhKIQ2ym3zJrZqLFUFvgeDuFWMDHhOQ1JsXU5Jx8at%2FNVvRRTiEZ5ZkmY&iv=gEWEBn3GuY4nIDfD"
+                  href="https://www.codechef.com/users/srmistk_360"
                   style="pointer-events: all"
                 >
                   <div
@@ -8718,7 +8718,7 @@
                   id="T4HBMDCBv9kEBgx5"
                   target="_blank"
                   rel="noopener"
-                  href="/_link/?link=https%3A%2F%2Fleetcode.com%2Fnp5427%2F&target=pExgnsrw0o09kPhbAB%2BGhe2nJLLE4Cd2MQq5XIBrXvspS19UZw%2B%2FwGrvy%2F1F%2F8td%2FRQngd5ukjxS5lCGK2GBM7JhlLArxDWwfjJWuIWwE1Vuwqvy8tK77A%3D%3D&iv=KDw0oyq%2F%2FFkklnIi"
+                  href="https://www.leetcode.com"
                   style="pointer-events: all"
                 >
                   <div
@@ -8784,7 +8784,7 @@
                   id="PY8vDoiRCGQBcckD"
                   target="_blank"
                   rel="noopener"
-                  href="/_link/?link=https%3A%2F%2Fwww.hackerrank.com%2Fnp5427&target=VCaGQZW3XAM0jTMXMBTIg%2BuA31paj6rYUElai9MsIjF66s2qmWlGx7EAgVq5ZOKMn%2F49SjNr%2BTyk2YbnTOrcJ3J9Usy%2BrukYl%2B4JviZr0pmTFbZhj6U1PsOqPTtL&iv=cIn2wbRLD9TyPzFi"
+                  href="https://www.hackerrank.com/np5427?hr_r=1"
                   style="pointer-events: all"
                 >
                   <div
@@ -9463,7 +9463,7 @@
                   id="qD2eMXXI6pVCPfBl"
                   target="_blank"
                   rel="noopener"
-                  href="/_link/?link=https%3A%2F%2Fwww.instagram.com%2Fnimish_julka%2F&target=b2c42RZz52ksrsD%2BSZoP4QiXWGGzKDwK6bQP86lfNTs8BMqtbQX3P1SAka1yzgi7%2BQDh%2BWgR%2FYPhwMXBy2VQnlqq1gD2TEQRJnvplF1gwOejVfKe1HY66t%2FXe84EPjaFjgnl&iv=HF9h6YFCjc5TFNKy"
+                  href="https://www.instagram.com/nimish_julka/"
                   style="pointer-events: all"
                 >
                   <div
@@ -9529,7 +9529,7 @@
                   id="HQ2Y7QujNjyB4wne"
                   target="_blank"
                   rel="noopener"
-                  href="/_link/?link=https%3A%2F%2Ftwitter.com%2FJulkaNimish&target=MDq0daYpm9Wk0WZ6zwDP6yPjh2Pc0pL3QRWr1o9Kglq5Vjiw96dCeq96bSkSiDjDDOQT%2B6tjM3HHGiRJAg3tT2w7XKPFP09tNtxwD%2FGvzpu%2FflS1QeV3BXJ9fg%3D%3D&iv=mteP6z26osN%2BzyJG"
+                  href="https://twitter.com/nimish_julka"
                   style="pointer-events: all"
                 >
                   <div
